--- a/src/index.css
+++ b/src/index.css
@@ -1,38 +1,69 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Kodchasan', sans-serif;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Kodchasan', sans-serif;
 }
 
-header{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    padding: 1.5rem 2.5rem;
+header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 1.5rem 2.5rem;
 }
 
 ul {
-    display: flex;
-    gap: 2em;
-    list-style-type: none;
+  display: flex;
+  gap: 2em;
+  list-style-type: none;
 }
 
-ul li{
+/* ul li{
     
+} */
+
+ul li a {
+  text-decoration: none;
+  font-size: 1.6em;
+  color: rgb(22, 24, 117);
 }
 
-ul li a{
-    text-decoration: none;
-    font-size: 1.6em;
-    color: rgb(22, 24, 117);
+ul li a:hover {
+  color: rgb(36, 39, 190);
+  border-bottom: 1px solid rgb(22, 24, 117);
 }
 
-ul li a:hover{
-    color: rgb(36, 39, 190);
-    border-bottom: 1px solid rgb(22, 24, 117);
+footer p {
+  padding: 1.5rem 2.5rem;
 }
 
-footer p{
-    padding: 1.5rem 2.5rem;
+/* Gallery layout  */
+.gallery {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 1rem;
+  padding: 1rem;
+  background-color: blueviolet;
+  min-height: 70vh;
+}
+
+.character-card {
+  display: flex;
+  flex-direction: column;
+  background-color: #fff;
+  padding: 0.5rem;
+  height: fit-content;
+}
+
+.card-header {
+  padding: 0.5rem 0.25rem;
+  margin: 0;
+  display: flex;
+  justify-content: space-between;
+}
+
+.frame {
+  background-color: cadetblue;
+  width: 100%;
+  height: 150px;
 }
