--- a/src/index.css
+++ b/src/index.css
@@ -18,10 +18,6 @@ ul {
   list-style-type: none;
 }
 
-/* ul li{
-
-} */
-
 ul li a {
   text-decoration: none;
   font-size: 1.6em;
@@ -41,8 +37,8 @@ footer p {
 .gallery {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  gap: 1rem;
-  padding: 1rem;
+  gap: 1.5rem;
+  padding: 2rem;
   background-color: aliceblue;
   min-height: 70vh;
 }
@@ -56,8 +52,13 @@ footer p {
   flex-direction: column;
   background-color: #fff;
   padding: 0.5rem;
-  box-shadow: 0 0 20px 8px #d0d0d0;
+  box-shadow: 0 0 20px -8px #d0d0d0cb;
   border-radius: 0.25rem;
+  transition: all 0.3s;
+}
+
+.character-card:hover {
+  box-shadow: 0 5px 20px 8px #d0d0d0cb;
 }
 
 .card-header {
@@ -65,7 +66,7 @@ footer p {
   margin: 0;
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-start;
 }
 
 .card-header h3 {
@@ -121,6 +122,7 @@ footer p {
   border: solid 1px cornflowerblue;
   color: white;
   border-radius: 0.25em;
+  cursor: pointer;
   transition: all 0.3s;
 }
 
@@ -129,6 +131,47 @@ footer p {
   color: cornflowerblue;
   box-shadow: 0 3px 10px 0.8px #a2a1a19c;
   transform: translateY(-3px);
+}
+
+/* Error Page  */
+.error-page {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: darksalmon;
+  font-size: 1.5rem;
+}
+
+.error-page h2 {
+  font-size: 3em;
+}
+
+.error-page.hide {
+  display: none;
+}
+
+.refresh-btn {
+  padding: 0.5rem 1.5rem;
+  font-size: 1em;
+  background: none;
+  border-radius: 25rem;
+  border: solid 1px;
+  cursor: pointer;
+  transition: all 0.3s;
+  background-color: white;
+}
+
+.refresh-btn:hover {
+  box-shadow: -7px -7px 20px 0px rgba(253, 120, 120, 0.4),
+    -4px -4px 5px 0px rgba(255, 120, 120, 0.4), 7px 7px 20px 0px #0002,
+    4px 4px 5px 0px #0001;
 }
 
 /* Popup Section */
