Fix linter errors

--- a/src/index.css
+++ b/src/index.css
@@ -173,9 +173,11 @@ footer p {
 }
 
 .refresh-btn:hover {
-  box-shadow: -7px -7px 20px 0px rgba(253, 120, 120, 0.4),
-    -4px -4px 5px 0px rgba(255, 120, 120, 0.4), 7px 7px 20px 0px #0002,
-    4px 4px 5px 0px #0001;
+  box-shadow:
+    -7px -7px 20px 0 rgba(253, 120, 120, 0.4),
+    -4px -4px 5px 0 rgba(255, 120, 120, 0.4),
+    7px 7px 20px 0 #0002,
+    4px 4px 5px 0 #0001;
 }
 
 /* Popup Section */
