--- a/src/index.css
+++ b/src/index.css
@@ -50,6 +50,7 @@
 
 .total-box {
   display: block;
+
   /* border: solid 2px darkslateblue; */
   background-color: var(--yellow);
   padding: 0.5rem;
@@ -65,20 +66,18 @@
 }
 
 /* Navigation link animation  */
-.nav-link:after {
+.nav-link::after {
   position: absolute;
   bottom: 0;
   left: 0;
   right: 0;
-  margin: auto;
+  margin: 0;
   width: 0%;
   content: '.';
   color: transparent;
   background: #aaa;
   height: 1px;
   text-align: left;
-  content: '.';
-  margin: 0;
   opacity: 0;
 }
 
@@ -86,7 +85,8 @@
   color: #fff;
   z-index: 1;
 }
-.nav-link:hover:after {
+
+.nav-link:hover::after {
   z-index: -10;
   animation: fill 1s forwards;
   opacity: 1;
@@ -98,10 +98,12 @@
     width: 0%;
     height: 1px;
   }
+
   50% {
     width: 100%;
     height: 1px;
   }
+
   100% {
     width: 100%;
     height: 100%;
@@ -253,8 +255,10 @@ footer p {
 }
 
 .refresh-btn:hover {
-  box-shadow: -7px -7px 20px 0 rgba(253, 120, 120, 0.4),
-    -4px -4px 5px 0 rgba(255, 120, 120, 0.4), 7px 7px 20px 0 #0002,
+  box-shadow:
+    -7px -7px 20px 0 rgba(253, 120, 120, 0.4),
+    -4px -4px 5px 0 rgba(255, 120, 120, 0.4),
+    7px 7px 20px 0 #0002,
     4px 4px 5px 0 #0001;
 }
 
