--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,8 @@
 
 .logo {
   flex: 1;
+  display: flex;
+  align-items: center;
 }
 
 .logo a {
@@ -111,8 +113,20 @@
   }
 }
 
+footer {
+  text-align: center;
+  background-color: #333;
+  padding: 2rem 1rem;
+  font-size: 1.2rem;
+}
+
 footer p {
-  padding: 1.5rem 2.5rem;
+  color: var(--blue);
+}
+
+footer a {
+  color: var(--yellow);
+  text-decoration: none;
 }
 
 /* Gallery layout  */
@@ -122,7 +136,7 @@ footer p {
   gap: 1.5rem;
   padding: 2rem;
   background-color: aliceblue;
-  min-height: 70vh;
+  min-height: 80vh;
 }
 
 .gallery.hide {
@@ -255,10 +269,8 @@ footer p {
 }
 
 .refresh-btn:hover {
-  box-shadow:
-    -7px -7px 20px 0 rgba(253, 120, 120, 0.4),
-    -4px -4px 5px 0 rgba(255, 120, 120, 0.4),
-    7px 7px 20px 0 #0002,
+  box-shadow: -7px -7px 20px 0 rgba(253, 120, 120, 0.4),
+    -4px -4px 5px 0 rgba(255, 120, 120, 0.4), 7px 7px 20px 0 #0002,
     4px 4px 5px 0 #0001;
 }
 
@@ -409,4 +421,59 @@ form input[type='submit']:hover {
   flex-direction: column;
   gap: 10px;
   font-size: 1.2em;
+}
+
+@media (max-width: 768px) {
+  .gallery {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .popup-container {
+    padding: 0.2rem;
+    flex-direction: column;
+  }
+
+  .page-header {
+    padding: 0.2rem;
+  }
+
+  .logo a {
+    font-size: 1rem;
+  }
+
+  .nav {
+    gap: 1rem;
+  }
+
+  .nav-link {
+    font-size: 1rem;
+    padding: 0;
+  }
+}
+
+@media (max-width: 530px) {
+  .gallery {
+    grid-template-columns: 1fr;
+  }
+
+  .nav {
+    gap: 0.5rem;
+  }
+
+  .logo a {
+    font-size: 1rem;
+  }
+
+  .nav-link {
+    font-size: 0.8rem;
+    padding: 0;
+  }
+
+  .total-box .label {
+    display: none;
+  }
+
+  #item-count {
+    border: none;
+  }
 }
