Fix linter errors

--- a/src/index.css
+++ b/src/index.css
@@ -124,7 +124,7 @@ footer p {
   color: var(--blue);
 }
 
-footer a {
+.github-link {
   color: var(--yellow);
   text-decoration: none;
 }
@@ -269,8 +269,10 @@ footer a {
 }
 
 .refresh-btn:hover {
-  box-shadow: -7px -7px 20px 0 rgba(253, 120, 120, 0.4),
-    -4px -4px 5px 0 rgba(255, 120, 120, 0.4), 7px 7px 20px 0 #0002,
+  box-shadow:
+    -7px -7px 20px 0 rgba(253, 120, 120, 0.4),
+    -4px -4px 5px 0 rgba(255, 120, 120, 0.4),
+    7px 7px 20px 0 #0002,
     4px 4px 5px 0 #0001;
 }
 
