--- a/src/index.css
+++ b/src/index.css
@@ -269,10 +269,8 @@ footer p {
 }
 
 .refresh-btn:hover {
-  box-shadow:
-    -7px -7px 20px 0 rgba(253, 120, 120, 0.4),
-    -4px -4px 5px 0 rgba(255, 120, 120, 0.4),
-    7px 7px 20px 0 #0002,
+  box-shadow: -7px -7px 20px 0 rgba(253, 120, 120, 0.4),
+    -4px -4px 5px 0 rgba(255, 120, 120, 0.4), 7px 7px 20px 0 #0002,
     4px 4px 5px 0 #0001;
 }
 
@@ -358,6 +356,7 @@ footer p {
 
 .popup-img {
   padding-top: 15%;
+  max-width: 50%;
   align-self: flex-start;
 }
 
