Fix linter error

--- a/src/index.css
+++ b/src/index.css
@@ -269,8 +269,10 @@ footer p {
 }
 
 .refresh-btn:hover {
-  box-shadow: -7px -7px 20px 0 rgba(253, 120, 120, 0.4),
-    -4px -4px 5px 0 rgba(255, 120, 120, 0.4), 7px 7px 20px 0 #0002,
+  box-shadow:
+    -7px -7px 20px 0 rgba(253, 120, 120, 0.4),
+    -4px -4px 5px 0 rgba(255, 120, 120, 0.4),
+    7px 7px 20px 0 #0002,
     4px 4px 5px 0 #0001;
 }
 
